<resources>
    <string name="app_name">Juego de Bamderas</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Número de Opciones</string>
    <string name="number_of_choices_description">Mosatrar 2, 4, 6 u 8 opciones</string>
    <string name="world_regions">Regiones</string>
    <string name="world_regions_description">Regiones para incluir en el cuestionario</string>
    <string name="guess_country">Adivina el país</string>
    <string name="results">%1$d intentos, %2$.02f%% correcto</string>
    <string name="incorrect_answer">Incorrecto !!</string>
    <string name="default_region_message">
        Se debe seleccionar una región. Configuración de Europa como la región predeterminada.
    </string>
    <string name="restarting_quiz">El juego se reiniciará con su nueva configuración</string>
    <string name="question">Pregunta %1$d de %2$d</string>
    <string name="reset_quiz">Reiniciar Juego</string>
    <string name="image_description">Image of the current flag in the quiz</string>
    <string name="default_region">Europa</string>
    <string name="title_activity_settings">Configuraciones</string>



    <string name="TextClave">Clave</string>

    <string name="buttonIngresar">Ingresar</string>
    <string name="buttonRegistrar">Registrar</string>


    <string name="textNombre">Nombre</string>
    <string name="TextUser">Usuario</string>



</resources>
