<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registrar">

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textNombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextUser"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextClaveText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TextClave"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonRegistroUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="RegistrarUsuario"
        android:text="@string/buttonRegistrar" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Salir"
        android:text="Salir" />
</LinearLayout>